# tabby

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml
docs/: DESIGN.md
src/: connection.rs  discovery.rs  error.rs  from_server.rs  into_sql.rs  lib.rs  macros.rs  protocol.rs  query.rs  result.rs  row.rs  row_writer.rs  sync_client.rs  sync_connection.rs  sync_decode.rs  sync_decode_direct.rs  sync_reader.rs
src/connection/: auth.rs  config.rs  connection.rs  tls.rs
src/connection/config/: ado_net.rs  jdbc.rs
src/connection/tls_stream/: native_tls_stream.rs  opentls_tls_stream.rs  rustls_tls_stream.rs
src/discovery/: async_std.rs  smol.rs  tokio.rs
src/protocol/: collation.rs  numeric.rs  pipeline.rs  reader.rs  session.rs  temporal.rs  wire.rs  xml.rs
src/protocol/pipeline/: message_stream.rs  result_stream.rs
src/protocol/temporal/: chrono.rs  time.rs
src/protocol/wire/: bulk_import.rs  data_type.rs  decode.rs  decode_direct.rs  encode.rs  frame.rs  guid.rs  handshake.rs  header.rs  iterator_ext.rs  login.rs  messages.rs  procedure_call.rs  raw_query.rs
src/protocol/wire/messages/: auth_challenge.rs  column_schema.rs  completion.rs  feature_ack.rs  login_response.rs  message_kind.rs  order_message.rs  return_value.rs  server_error.rs  server_notice.rs  session_change.rs
src/protocol/wire/types/: binary.rs  bit.rs  date.rs  datetime2.rs  datetimen.rs  datetimeoffsetn.rs  fixed_len.rs  float.rs  guid.rs  image.rs  (+10 more)
tests/: bulk.rs  common.rs  connection.rs  error.rs  new_features.rs  query.rs  transactions.rs  types.rs
(+3 files in other folders)
