[package]
name = "tabby"
version = "0.1.0"
edition = "2024"
description = "Pure Rust TDS 7.4+ protocol library for Microsoft SQL Server"
license = "MIT"
repository = "https://github.com/copycatdb/tabby"
readme = "README.md"
keywords = ["sql-server", "tds", "database", "mssql", "async"]
categories = ["database"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-rustls = "0.26"
rustls = "0.23"
once_cell = "1"
chrono = { version = "0.4", default-features = false, optional = true }
uuid = { version = "1", features = ["v4"] }
futures-util = { version = "0.3", default-features = false, features = ["io", "sink"] }
rust_decimal = "1"
enumflags2 = "0.7"
byteorder = "1.0"
encoding_rs = "0.8"
thiserror = "2.0"
bytes = "1.0"
pretty-hex = "0.4"
pin-project-lite = "0.2"
asynchronous-codec = "0.7"
async-trait = "0.1"
connection-string = "0.2"
num-traits = "0.2"
tracing = { version = "0.1", features = ["log"] }
rustls-pemfile = "2"
rustls-native-certs = "0.8"

[features]
default = ["rustls"]
rustls = []
native-tls = []
vendored-openssl = []
integrated-auth-gssapi = []
winauth = []
docs = []
bigdecimal = []
rust_decimal = []
chrono = ["dep:chrono"]
time = []

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
